--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ rusqlite = { version = "0.24", features = ["bundled", "functions", "limits", "lo
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
+clap = "3.0.0-beta.2"
