--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "sangaku_shaker"
 version = "0.1.0"
 authors = ["Arnau Siches <asiches@gmail.com>"]
 edition = "2018"
+license = "MIT"
 
 [dependencies]
 anyhow = "1.0"
